--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,10 @@
     "se/selenium-server-standalone": "*"
   },
 
+  "bugs": {
+    "url": "https://github.com/codesource/Flow3.Behat/issues"
+  },
+
   "bin": ["bin/cdsrc-flow-behat"],
 
   "autoload": {
